<resources>
    <string name="app_name">alexey_kovalev_auii_drill_i</string>
    <string name="lion_king_description">" Blast off into a whole new realm of majesty and wonder with \"The Lion King in Space\"! Join Leo, the cosmic prince, as he navigates the celestial savannah with the guidance of cosmic spirits.  "</string>
    <string name="get_tickets">GET TICKETS</string>
    <string name="title">THE LION KING - IN SPACE</string>
    <string name="back">BACK</string>
    <string name="select_tickets">Select Your Tickets</string>
    <string name="date">Date:</string>
    <string name="child_tickets">Child Tickets\n15$</string>
    <string name="adult_tickets">Adult Tickets:\n20$</string>
    <string name="_0">0</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_message">Please confirm your order:</string>
    <string name="child_tickets_label">Number of Child Tickets:</string>
    <string name="adult_tickets_label">Number of Adult Tickets:</string>
    <string name="total_sum_label">Total Sum:</string>
    <string name="date_label">Date:</string>
    <string name="total_sum_template">Total Sum: $%1$d</string>
    <string name="ticket_order_sent">Ticket order sent!</string>
    <string name="forgot_pick_tickets">You forgot to pick tickets</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_format">dd/MM/yy | HH:mm</string>
    <string name="total_sum_0">Total sum: 0$</string>
</resources>
