<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_movie_lion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_color_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/title"
        android:gravity="center"
        android:textColor="@color/goldenYellow"
        android:autoSizeTextType="uniform"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/complexImageLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45">

        <ImageView
            android:id="@+id/imageViewCircle"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle_gradient" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toBottomOf="@id/imageViewCircle"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCircle"
            app:layout_constraintStart_toStartOf="@+id/imageViewCircle"
            app:layout_constraintTop_toTopOf="@+id/imageViewCircle"
            app:shapeAppearanceOverlay="@style/roundedImage"
            android:src="@drawable/lion_king_space1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/lion_king_description"
        android:textColor="@color/goldenYellow"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:padding="8dp"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/complexImageLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbarThumbHorizontal="@color/goldenYellow"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space2" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space3" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space4" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space5" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space6" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space7" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space8" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lion_king_space9" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="15dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.6"
        app:layout_constraintHeight_percent="0.1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGetTickets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:padding="6dp"
            android:background="@drawable/btn_background_single"
            android:text="@string/get_tickets"
            android:textColor="@color/goldenYellow"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
